lib/iptables
# Generated by iptables-save v1.6.1 on Tue Aug 27 10:16:06 2019
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -m comment --comment "existing connections" -j ACCEPT
-A INPUT -s 127.0.0.1/32 -m comment --comment "local traffic" -j ACCEPT
-A INPUT -p icmp -m comment --comment "ping, etc." -j ACCEPT
-A INPUT -i lo -m comment --comment "loopback interface" -j ACCEPT
-A INPUT -m limit --limit 2/min -m comment --comment "log dropped inbound packets" -j LOG --log-prefix "IPTables: INPUT REJECT: "
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -m state --state RELATED,ESTABLISHED -m comment --comment "existing connections" -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -m comment --comment HTTPS -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -m comment --comment HTTP -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 21 -m comment --comment FTP -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -m comment --comment SSH -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 43 -m comment --comment whois -j ACCEPT
-A OUTPUT -p udp -m udp --dport 67 -m comment --comment DHCP -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 8080 -m comment --comment "HTTP alt" -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 6969 -j ACCEPT -m comment --comment bittorrent
-A OUTPUT -p udp -m udp --dport 51413 -j ACCEPT -m comment --comment "bittorrent (transmission)"
-A OUTPUT -p udp -m udp --dport 33434:33524 -m comment --comment traceroute -j ACCEPT
-A OUTPUT -o lo -m comment --comment "loopback traffic" -j ACCEPT
-A OUTPUT -d 127.0.0.1/32 -m comment --comment "local traffic" -j ACCEPT
-A OUTPUT -p icmp -m comment --comment "ping, etc." -j ACCEPT
-A OUTPUT -d 5.39.93.71/32 -p tcp -m tcp --dport 9999 -m comment --comment "webpaste script to termbin.com" -j ACCEPT
-A OUTPUT -p udp -m udp --dport 34197 -m comment --comment factorio -j ACCEPT
-A OUTPUT -m owner --gid-owner 1001 -m comment --comment "internet group gets a free pass" -j ACCEPT
-A OUTPUT -p udp -m udp --dport 86 -m comment --comment video/audio -j ACCEPT
-A OUTPUT -m limit --limit 2/min -m comment --comment "log dropped outbound packets" -j LOG --log-prefix "IPTables: OUTPUT REJECT: "
-A OUTPUT -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Tue Aug 27 10:16:06 2019
